# champlain-discord-bot

./: .deepsource.toml  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Bot.py  Dockerfile  Graduation.md  How_To_Maintain.md  Makefile  README.md  fly.toml  log_maker.py  pyproject.toml  requirements-dev.txt  requirements.txt  rules.txt  test_script.sh  tox.ini
.github/: dependabot.yml  renovate.json
.github/workflows/: lint.yml
.run/: Bot.run.xml
bot/: bot.py  log_maker.py
bot/cogs/: admin.py  graduation.py  reaction_roles.py  rules_verify.py
cogs/: admin.py  graduation.py  reaction_roles.py  rules_verify.py
text/: getting_started.txt  graduation.txt  info.json  reaction_roles.txt  rules.txt
