[project]
authors = [
    {name = "Cyb3r-Jak3", email = "git@Cyberjake.xyz"},
]
license = {text = "MPL-2.0"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "discord-py==2.6.4",
    "cyberjake<1.0.0,>=0.1.0",
]
name = "champlain-discord-bot"
version = "0.1.0"
description = "Discord bot to manage Champlain's Discord Server"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S", "PLC"]
